cabal-version:      3.0
name:               hasc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Berthels
maintainer:         john.berthels@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common deps
    build-depends:
        base
        , containers
        , MissingH

library 
    import:
        warnings
        , deps
    exposed-modules:
        Hasc.Lex
        Hasc.Parse
        Hasc.Eval
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    default-language: Haskell2010

executable hasc
    import:
        warnings
        , deps
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: hasc
    hs-source-dirs:   app
    default-language: Haskell2010


test-suite test
    import:
        warnings
        , deps
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    other-modules: HLex, HParse
    main-is:          Main.hs
    build-depends:
        hasc,
        HUnit
